--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.12",
     "bootstrap": "v5.3",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
